@@ -10,11 +10,14 @@ Changes log
        - Fixed closing issue with pipes used by BioUtils.getReader
          and getInputStream methods.
        - Fixed concurrency bug upon application start or strop that could
-         cause erros such as "no Restlet defined to process calls. Maybe it
+         cause errors such as "no Restlet defined to process calls. Maybe it
          wasn't properly started" errors (500). Reported by several persons 
          including David Fuchs, Danny Leshem, Yunwu Zhu and Bjorn Roche.
        - Fixed range issue that leads to generate a Response having a 
          Content-length greater than actual content with range request.
+       - Fixed potential security issue that allows Javascript injection 
+         inside entities of error reponses.
+         Reported by Danny Leshem.
     - Misc
        - Reverted Role equality test to default Java object equality as
          equality based on name could cause issues with MemoryRealm
